--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -8,3 +8,6 @@ $tittle-background-color: #f5f4fa;
 $grey-background: #2f303a;
 $new-bgr: rgba(196, 196, 196, 1);
 $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+$mobile: 480px;
+$tablet: 768px;
+$desktop: 1200px;
