--- a/sass/utils/_placeholder.scss
+++ b/sass/utils/_placeholder.scss
@@ -1,7 +1,13 @@
 %flexbox {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+
+    @media screen and (min-width: $tablet) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 }
 
 %cubic-bezier {
