--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,13 +1,26 @@
 .logotype {
   display: block;
-  width: 145px;
+  width: 134px;
   text-decoration: none;
   margin: 0;
   color: $accent-color;
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
+
+  @media screen and (min-width: $tablet) {
+
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: block;
+    width: 145px;
+    text-decoration: none;
+    margin: 0;
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .logotype__text {
