--- a/sass/layout/_decision.scss
+++ b/sass/layout/_decision.scss
@@ -12,7 +12,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/newbgr.jpg);
+    url(../../images/newbgr.jpg);
   background-repeat: no-repeat;
   background-position: center;
   outline: 1px solid #000000;
