--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -56,9 +56,9 @@
 .button {
   border: none;
   border-radius: 4px;
-  padding: 10px 32px;
+  padding: 10px 24px;
   color: #ffffff;
-  min-width: 216px;
+  min-width: 200px;
   height: 50px;
   background-color: #2196f3;
   font-family: inherit;
@@ -66,6 +66,12 @@
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
+}
+@media screen and (min-width: 1200px) {
+  .button {
+    min-width: 216px;
+    padding: 10px 32px;
+  }
 }
 
 .logotype {
@@ -81,10 +87,7 @@
 }
 @media screen and (min-width: 1200px) {
   .logotype {
-    display: block;
     width: 145px;
-    text-decoration: none;
-    margin: 0;
     font-size: 26px;
     line-height: 1.19;
   }
@@ -93,8 +96,15 @@
 .logotype__text {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
+}
+@media screen and (min-width: 1200px) {
+  .logotype__text {
+    width: 145px;
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 .logotype__text--black {
   color: black;
@@ -201,13 +211,21 @@
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
-  width: 696px;
+  width: 360px;
   color: #ffffff;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.31;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+}
+@media screen and (min-width: 1200px) {
+  .decision__title {
+    ont-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    width: 696px;
+  }
 }
 
 .form__comment label {
@@ -402,7 +420,8 @@
     padding-bottom: 10px;
     color: #757575;
     font-weight: 500;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.02em;
     text-decoration: none;
   }
@@ -411,11 +430,9 @@
   .contacts__link {
     padding-top: 32px;
     padding-bottom: 32px;
-    color: #757575;
     font-weight: 500;
+    font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0.02em;
-    text-decoration: none;
   }
 }
 .contacts__link--hover {
