--- a/sass/components/_textstyle.scss
+++ b/sass/components/_textstyle.scss
@@ -2,13 +2,24 @@
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
-  width: 696px;
+  width: 360px;
   color: $white-color;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.31;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+
+  @media screen and (min-width: $tablet) {
+     
+  }
+
+  @media screen and (min-width: $desktop) {
+    ont-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    width: 696px;
+  }
 }
 .form__comment label {
   height: 18px;
