--- a/sass/layout/_decision.scss
+++ b/sass/layout/_decision.scss
@@ -1,7 +1,7 @@
 .decision {
-  height: 600px;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  height: 400px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   margin-left: auto;
   margin-right: auto;
   box-sizing: border-box;
@@ -13,9 +13,16 @@
       rgba(47, 48, 58, 0.4)
     ),
     url(../../images/newbgr.jpg);
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   outline: 1px solid #000000;
+
+  @media screen and (min-width: $desktop) {
+    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .button:active {
