--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -108,7 +108,8 @@
     padding-bottom: 10px;
     color: $primary-text-color;
     font-weight: 500;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.02em;
     text-decoration: none;
   }
@@ -116,11 +117,9 @@
   @media screen and (min-width: $desktop) {
   padding-top: 32px;
   padding-bottom: 32px;
-  color: $primary-text-color;
   font-weight: 500;
+  font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.02em;
-  text-decoration: none;
   }
 
   &--hover {
