--- a/sass/components/_textstyle.scss
+++ b/sass/components/_textstyle.scss
@@ -45,12 +45,17 @@
 }
   
 .features__subtitle {
+  text-align: center;
   margin-top: 0;
   margin-bottom: 10px;
   color: $title-text-color;
   font-size: 14px;
   line-height: 1.14;
   font-weight: 700;
+
+  @media screen and (min-width: $desktop) {
+    text-align: start;
+  }
 }
 
 .section__title {
