--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -3,26 +3,70 @@
 
   &__list {
     display: flex;
-    align-items: baseline;
     flex-wrap: wrap;
-    justify-content: space-between;
+
+    @media screen and (min-width: $tablet) {
+      flex-wrap: wrap;
+      align-items: baseline;
+      justify-content: space-between;
+      width: 738px;
+      margin-right: auto;
+      margin-left: auto;
+    }
+
+    @media screen and (min-width: $desktop) {
+      align-items: baseline;
+      justify-content: space-between;
+      width: 1170px;
+    }
   }
 
   &__item {
-    width: 270px;
+    width: 100%;
+    padding-bottom: 30px;
+
+    @media screen and (min-width: $tablet) {
+      width: 354px;
+      position: relative;
+    }
+
+    @media screen and (min-width: $desktop) {
+      width: 270px;
+    }
+
   }
 
   &__box {
     @extend %flexbox;
-    width: 270px;
     height: 120px;
     margin-bottom: 30px;
     border-radius: 4px;
     background-color: $tittle-background-color;
+
+    @media screen and (min-width: $tablet) {
+      width: 354px;
+    }
+
+    @media screen and (min-width: $desktop) {
+      width: 270px;
+    }
   }
 
   &__svg {
     width: 70px;
     height: 70px;
+    position: absolute;
+    left: 43%;
+
+    @media screen and (min-width: $tablet) {
+      position: absolute;
+      left: 40%;
+    }
+
+    @media screen and (min-width: $desktop) {
+      position: absolute;
+      left: 37%;
+    }
+
   }
 }
