--- a/css/main.css
+++ b/css/main.css
@@ -772,6 +772,15 @@
   }
 }
 
+.exampl {
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .exampl {
+    display: flex;
+  }
+}
+
 .examples {
   flex-wrap: wrap;
   justify-content: space-between;
