--- a/sass/layout/_examples.scss
+++ b/sass/layout/_examples.scss
@@ -1,3 +1,12 @@
+.exampl {
+  display: none;
+  
+  @media screen and (min-width: $desktop) {
+   display: flex;
+  }
+
+}
+
 .examples {
   @extend %flexbox;
   flex-wrap: wrap;
