--- a/css/main.css
+++ b/css/main.css
@@ -34,16 +34,6 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.section__title {
-  margin-top: 0;
-  margin-bottom: 50px;
-  color: #212121;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-}
-
 .page {
   color: #757575;
   background-color: #ffffff;
@@ -172,6 +162,7 @@
   padding: 0;
   border: none;
   border-radius: 50%;
+  justify-content: center;
 }
 .actions__network:hover, .actions__network:focus {
   background-color: #2196f3;
@@ -262,6 +253,26 @@
 @media screen and (min-width: 1200px) {
   .features__subtitle {
     text-align: start;
+  }
+}
+
+.section__title {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18;
+  color: #212121;
+  margin-bottom: 30px;
+  margin-top: 0;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .section__title {
+    margin-top: 0;
+    margin-bottom: 50px;
+    color: #212121;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
   }
 }
 
@@ -817,14 +828,45 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media screen and (min-width: 768px) {
+  .stuff__list {
+    width: 738px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .stuff__list {
+    width: 1170px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
 .stuff__item {
-  width: 270px;
+  width: 100%;
+  margin-bottom: 30px;
   background: #ffffff;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+@media screen and (min-width: 768px) {
+  .stuff__item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .stuff__item {
+    width: 270px;
+  }
+}
 .stuff__img {
   display: block;
+  width: 100%;
+}
+@media screen and (min-width: 1200px) {
+  .stuff__img {
+    width: 270px;
+  }
 }
 
 .customers {
