--- a/sass/layout/_stuff.scss
+++ b/sass/layout/_stuff.scss
@@ -8,17 +8,44 @@
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    @media screen and (min-width: $tablet) {
+      width: 738px;
+      margin-right: auto;
+      margin-left: auto;
+    }
+
+    @media screen and (min-width: $desktop) {
+      width: 1170px;
+      margin-right: auto;
+      margin-left: auto;
+    }
   }
 
   &__item {
-    width: 270px;
+    width: 100%;
+    margin-bottom: 30px;
     background: $white-color;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    @media screen and (min-width: $tablet) {
+      width: 354px;
+    }
+
+    @media screen and (min-width: $desktop) {
+      width: 270px;
+    }
+
   }
 
   &__img {
     display: block;
+    width: 100%;
+
+    @media screen and (min-width: $desktop) {
+      width: 270px;
+    }
   }
 }
 
