--- a/css/main.css
+++ b/css/main.css
@@ -508,7 +508,7 @@
   box-sizing: border-box;
   text-align: center;
   background-color: rgb(196, 196, 196);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/newbgr.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/newbgr.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
