--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -89,9 +89,11 @@
 
   &__item + &__item {
 
-    @media screen and (min-width: $tablet) {
-      display: block;
-    }
+    // @media screen and (min-width: $tablet) {
+    //   display: flex;
+    //   justify-content: center;
+    //   align-items: center;
+    // }
   
     @media screen and (min-width: $desktop) {
       display: flex;
@@ -104,7 +106,9 @@
   @extend %flexbox;
 
   @media screen and (min-width: $tablet) {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
     padding-bottom: 10px;
     color: $primary-text-color;
     font-weight: 500;
@@ -115,6 +119,9 @@
   }
 
   @media screen and (min-width: $desktop) {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   padding-top: 32px;
   padding-bottom: 32px;
   font-weight: 500;
@@ -137,6 +144,10 @@
   &:hover,
   &:focus {
     color: $accent-color;
+  }
+
+  &--petty {
+    padding-bottom: 0;
   }
 }
 
