--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -2,14 +2,22 @@
   display: inline-flex;
   margin: auto;
 
-  &__unit {
-    width: 170px;
-    height: 92px;
-    margin-left: 30px;
+  
+
+  @media screen and (min-width: $tablet) {
+    
   }
 
-  &__unit:first-child {
-    margin-left: 0;
+  @media screen and (min-width: $desktop) {
+    &__unit {
+      width: 170px;
+      height: 92px;
+      margin-left: 30px;
+    }
+  
+    &__unit:first-child {
+      margin-left: 0;
+    }
   }
 }
 
