--- a/css/main.css
+++ b/css/main.css
@@ -16,13 +16,13 @@
   display: none;
 }
 
-.footer__icon, .button--flex, .footer__field, .customers__link, .examples, .features__box, .form__agreement, .modal__btn, .modal, .contacts__link, .header__container, .modal__title, .actions__icon, .actions__network, .actions {
+.footer__icon, .button--flex, .footer__field, .examples, .features__box, .form__agreement, .modal__btn, .modal, .contacts__link, .header__container, .modal__title, .actions__icon, .actions__network, .actions {
   display: flex;
   align-items: center;
   justify-content: flex-start;
 }
 @media screen and (min-width: 768px) {
-  .footer__icon, .button--flex, .footer__field, .customers__link, .examples, .features__box, .form__agreement, .modal__btn, .modal, .contacts__link, .header__container, .modal__title, .actions__icon, .actions__network, .actions {
+  .footer__icon, .button--flex, .footer__field, .examples, .features__box, .form__agreement, .modal__btn, .modal, .contacts__link, .header__container, .modal__title, .actions__icon, .actions__network, .actions {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -873,17 +873,55 @@
 }
 
 .customers {
-  display: inline-flex;
-  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  min-width: 450px;
+  margin: 0;
+  justify-content: center;
+}
+.customers__unit {
+  width: 210px;
+  height: 92px;
+  margin-left: 0;
+  margin-bottom: 30px;
+}
+.customers__unit:nth-child(odd) {
+  margin-right: 30px;
+}
+@media screen and (min-width: 768px) {
+  .customers {
+    min-width: 738px;
+    margin: 0;
+    justify-content: center;
+  }
+  .customers__unit {
+    width: 226px;
+    height: 92px;
+    margin-left: 0;
+    margin-bottom: 30px;
+    margin-right: 30px;
+  }
+  .customers__unit:nth-child(3n) {
+    margin-right: 0;
+  }
 }
 @media screen and (min-width: 1200px) {
+  .customers {
+    min-width: 1170px;
+    margin: 0;
+    justify-content: center;
+  }
   .customers__unit {
     width: 170px;
     height: 92px;
+    margin-right: 0;
     margin-left: 30px;
   }
   .customers__unit:first-child {
-    margin-left: 0;
+    margin: 0;
+  }
+  .customers__unit:last-child {
+    margin: 0;
   }
 }
 
@@ -896,7 +934,10 @@
 }
 
 .customers__link {
-  width: 170px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 210px;
   height: 92px;
   padding: 0;
   border: 1px solid rgb(175, 177, 184);
@@ -909,6 +950,18 @@
 }
 .customers__link:hover, .customers__link:focus {
   border-color: #2196f3;
+}
+@media screen and (min-width: 768px) {
+  .customers__link {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .customers__link {
+    width: 170px;
+    height: 92px;
+    padding: 0;
+  }
 }
 
 .footer {
