--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -1,23 +1,60 @@
 .customers {
-  display: inline-flex;
-  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  min-width: 450px;
+  margin: 0;
+  justify-content: center;
+ 
+  &__unit {
+    width: 210px;
+    height: 92px;
+    margin-left: 0;
+    margin-bottom: 30px;
 
+  }
   
+  &__unit:nth-child(odd) {
+    margin-right: 30px;
+  }
 
   @media screen and (min-width: $tablet) {
-    
+  min-width: 738px;
+  margin: 0;
+  justify-content: center;
+
+  &__unit {
+    width: 226px;
+    height: 92px;
+    margin-left: 0;
+    margin-bottom: 30px;
+    margin-right: 30px;
+  }
+
+  &__unit:nth-child(3n) {
+    margin-right: 0;
+  }
   }
 
   @media screen and (min-width: $desktop) {
+  min-width: 1170px;
+  margin: 0;
+  justify-content: center;
+
     &__unit {
       width: 170px;
       height: 92px;
+      margin-right: 0;
       margin-left: 30px;
     }
   
     &__unit:first-child {
-      margin-left: 0;
+      margin: 0;;
     }
+
+    &__unit:last-child {
+      margin: 0;;
+    }
+
   }
 }
 
@@ -33,8 +70,10 @@
 }
 
 .customers__link {
-  @extend %flexbox;
-  width: 170px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 210px;
   height: 92px;
   padding: 0;
   border: 1px solid rgba(175, 177, 184, 1);
@@ -51,5 +90,15 @@
   &:hover,
   &:focus {
     border-color: $accent-color;
+  }
+
+  @media screen and (min-width: $tablet) {
+    width: 226px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 170px;
+    height: 92px;
+    padding: 0;
   }
 }  
