--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,13 +4,60 @@
   padding-bottom: 60px;
 
   &__box {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    width: 450px;
+    justify-content: center;
+
+    @media screen and (min-width: $tablet) {
+      flex-wrap: wrap;
+      width: 100%;
+      flex-direction: inherit;
+      align-items: baseline
+    }
+
+    @media screen and (min-width: $desktop) {
     display: inline-flex;
     align-items: baseline;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    }
   }
 
   &__address {
     width: 231px;
   }
+
+  &__logo {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+
+    @media screen and (min-width: $tablet) {}
+
+    @media screen and (min-width: $desktop) {
+      justify-content: flex-start;
+      align-items: baseline;
+    }
+
+  }
+}
+
+.address {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+  @media screen and (min-width: $tablet) {}
+
+  @media screen and (min-width: $desktop) {
+    align-items: baseline;
+
+  }
+
 }
 
 .address__map {
@@ -56,21 +103,40 @@
 
 .footer-form {
   display: flex;
-  margin-left: 93px;
-  width: 570px;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 450px;
+
+  @media screen and (min-width: $tablet) {
+    
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-left: 93px;
+    width: 570px;
+  }
 }
 
 .footer__field {
   @extend %flexbox;
-  flex-direction: row;
-  text-align: left;
-  width: 570px;
+  flex-direction: column;
+  text-align: center;
+  width: 450px;
+  align-items: center;
+ 
+
+  @media screen and (min-width: $desktop) {
+    flex-direction: row;
+    text-align: left;
+    width: 570px;
+  }
 }
 
 .footer__input {
-  width: 358px;
+  width: 450px;
   height: 48px;
-  margin-right: 12px;
+  margin-right: auto;
+  margin-left: auto;
   padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -81,11 +147,29 @@
     rgba(33, 150, 243, 0),
     rgba(33, 150, 243, 0)
   );
+
+  @media screen and (min-width: $tablet) {}
+
+  @media screen and (min-width: $desktop) {
+    width: 358px;
+    margin-right: 12px;
+    margin-left: 0;
+  }
 }
 
 .button--flex {
   @extend %flexbox;
   width: 200px;
+  margin-top: 30px;
+  
+  @media screen and (min-width: $tablet) {
+    margin-top: 20px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 200px;
+    margin-top: 0;
+  }
 }
 
 .footer__icon {
@@ -93,4 +177,18 @@
   width: 24px;
   height: 23px;
   margin-left: 10px;
+}
+
+.footer__card {
+  
+  @media screen and (min-width: $tablet) {
+    margin-left: 76px;
+    margin-right: 95px;
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin: 0;
+    width: 231px;
+  }
 }
